--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -6,6 +6,13 @@
 
 2003-06-17  Kris Warkentin  <kewarken@qnx.com>
 
+	* nto-tdep.c (nto_map_arch_to_cputype): Recognize "powerpc".
+	(nto_find_and_open_solib): Likewise.
+	(nto_init_solib_absolute_prefix): Likewise.
+	(_initialize_nto_tdep): Fix indentation.
+
+2003-06-17  Kris Warkentin  <kewarken@qnx.com>
+
 	* i386-nto-tdep.c (i386nto_sigcontext_addr): Make sp a CORE_ADDR.
 
 2003-06-17  Kris Warkentin  <kewarken@qnx.com>
