gdb/         * NEWS: Mention gdbserver detach change and "disconnect" command.         * infcmd.c (disconnect_command): New function.         (_initialize_infcmd): Add ``disconnect'' command.         * remote.c (remote_async_detach): Delete.         (remote_detach): Merge remote_async_detach.         (remote_disconnect): New.         (init_remote_ops): Set to_disconnect.         (init_remote_cisco_ops): Likewise.         (init_remote_async_ops): Likewise.  Use remote_detach.         * target.c (cleanup_target): Default to_disconnect.         (update_current_target): Inherit to_disconnect.         (target_disconnect, debug_to_disconnect): New functions.         (setup_target_debug): Set to_disconnect.         * target.h (struct target_ops): Add to_disconnect.         (target_disconnect): Add prototype. gdbserver/ 	* linux-low.c: Move comment to linux_thread_alive where it belonged. 	(linux_detach_one_process, linux_detach): New functions. 	(linux_target_ops): Add linux_detach. 	* server.c (main): Handle 'D' packet. 	* target.h (struct target_ops): Add "detach" member. 	(detach_inferior): Define. mi/         * mi-cmds.c (mi_cmds): Add "-target-disconnect".

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,23 @@
 2003-06-17  Daniel Jacobowitz  <drow@mvista.com>
 
+        * NEWS: Mention gdbserver detach change and "disconnect" command.
+        * infcmd.c (disconnect_command): New function.
+        (_initialize_infcmd): Add ``disconnect'' command.
+        * remote.c (remote_async_detach): Delete.
+        (remote_detach): Merge remote_async_detach.
+        (remote_disconnect): New.
+        (init_remote_ops): Set to_disconnect.
+        (init_remote_cisco_ops): Likewise.
+        (init_remote_async_ops): Likewise.  Use remote_detach.
+        * target.c (cleanup_target): Default to_disconnect.
+        (update_current_target): Inherit to_disconnect.
+        (target_disconnect, debug_to_disconnect): New functions.
+        (setup_target_debug): Set to_disconnect.
+        * target.h (struct target_ops): Add to_disconnect.
+        (target_disconnect): Add prototype.
+
+2003-06-17  Daniel Jacobowitz  <drow@mvista.com>
+
 	* breakpoint.c (insert_catchpoint): New function.
 	(insert_breakpoints): Use catch_exceptions to call
 	insert_catchpoint.  Disable catchpoints if they fail to insert.
