--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,11 @@
 2003-06-17  Stephane Carrez  <stcarrez@nerim.fr>
 
+	* ada-lang.c (scan_discrim_bound): Name first argument.
+	(ada_add_block_symbols): Remove BLOCK_SYM to use local variable
+	declared by ALL_BLOCK_SYMBOLS.
+
+2003-06-17  Stephane Carrez  <stcarrez@nerim.fr>
+
 	* ada-tasks.c (find_function_in_inferior): Don't declare it.
 	("regcache.h"): Include it.
 	* ada-lex.l (block_lookup): Replace VAR_NAMESPACE with VAR_DOMAIN.
