--- a/sim/mips/ChangeLog
+++ b/sim/mips/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-17  Richard Sandiford  <rsandifo@redhat.com>
+
+	* mips.igen (do_dmultx): Fix check for negative operands.
+
 2003-05-16  Ian Lance Taylor  <ian@airs.com>
 
 	* Makefile.in (SHELL): Make sure this is defined.
