--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-19  Daniel Jacobowitz  <drow@mvista.com>
+
+	* breakpoint.c (insert_catchpoint): Call internal_error.
+
 2003-06-19  Theodore A. Roth  <troth@openavr.org>
 
 	* avr-tdep.c (avr_push_dummy_code): Delete function.
