* varobj.c (get_type, get_target_type): Use check_typedef.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,9 @@
 2003-06-19  Daniel Jacobowitz  <drow@mvista.com>
 
+	* varobj.c (get_type, get_target_type): Use check_typedef.
+
+2003-06-19  Daniel Jacobowitz  <drow@mvista.com>
+
 	* breakpoint.c (insert_catchpoint): Call internal_error.
 
 2003-06-19  Theodore A. Roth  <troth@openavr.org>
